code/myparser.output
Terminals unused in grammar

   KW_BREAK


Grammar

    0 $accept: program $end

    1 program: decl_list func_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    2        | func_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    3        | decl_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    4        | KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'

    5 type_spec: KW_INT
    6          | KW_REAL
    7          | KW_BOOL
    8          | KW_STRING
    9          | '[' ']' KW_INT
   10          | '[' ']' KW_REAL
   11          | '[' ']' KW_BOOL
   12          | '[' ']' KW_STRING

   13 decl_id: IDENTIFIER
   14        | IDENTIFIER '[' ']'
   15        | table_id

   16 table_id: IDENTIFIER '[' expr ']'

   17 table_init: '{' table_init_values '}'

   18 table_init_values: table_init_values ',' expr
   19                  | expr

   20 decl_list: decl_list decl
   21          | decl

   22 decl: KW_CONST const_decl_body
   23     | KW_LET let_decl_body

   24 let_decl_body: let_decl_list ':' type_spec ';'

   25 let_decl_list: let_decl_list ',' let_decl_init
   26              | let_decl_init

   27 let_decl_init: decl_id
   28              | decl_id ASSIGN_OP expr
   29              | decl_id ASSIGN_OP table_init

   30 const_decl_body: const_decl_list ':' type_spec ';'

   31 const_decl_list: const_decl_list ',' const_decl_init
   32                | const_decl_init

   33 const_decl_init: decl_id ASSIGN_OP expr
   34                | decl_id ASSIGN_OP table_init

   35 func_list: func_list func
   36          | func

   37 func: KW_CONST decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

   38 func_param_list: %empty
   39                | func_param_list ',' func_param
   40                | func_param

   41 func_param: param_list ':' type_spec

   42 param_list: param_list ',' decl_id
   43           | decl_id

   44 body: instr_list
   45     | body_decl_list instr_list

   46 body_decl_list: body_decl_list decl
   47               | decl

   48 instr_list: instr_list instr
   49           | instr

   50 expr: term '+' expr
   51     | term '-' expr
   52     | term '*' expr
   53     | term '/' expr
   54     | term '%' expr
   55     | term '=' expr
   56     | term '<' expr
   57     | term EQUAL_LESS_OP expr
   58     | term DIFFERENT_OP expr
   59     | term AND_OP expr
   60     | term OR_OP expr
   61     | term

   62 term: POS_INT
   63     | POS_REAL
   64     | STRING
   65     | bool
   66     | decl_id
   67     | func_call
   68     | '(' expr ')'
   69     | '-' term
   70     | '+' term
   71     | NOT_OP term

   72 bool: KW_TRUE
   73     | KW_FALSE

   74 func_call: IDENTIFIER '(' func_stm ')'
   75          | IDENTIFIER '(' ')'

   76 func_stm: func_stm ',' expr
   77         | expr

   78 instr: instr_func_call
   79      | instr_assigment
   80      | instr_control
   81      | instr_loop
   82      | return

   83 instr_assigment: decl_id ASSIGN_OP expr ';'

   84 instr_control: KW_IF expr KW_THEN stmt KW_ELSE stmt KW_FI ';'
   85              | KW_IF expr KW_THEN stmt KW_FI ';'

   86 stmt: instr_list

   87 instr_loop: KW_WHILE expr KW_LOOP stmt KW_POOL ';'

   88 return: KW_RETURN expr ';'
   89       | KW_RETURN ';'

   90 instr_func_call: func_call ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 54
'(' (40) 1 2 3 4 37 68 74 75
')' (41) 1 2 3 4 37 68 74 75
'*' (42) 52
'+' (43) 50 70
',' (44) 18 25 31 39 42 76
'-' (45) 51 69
'/' (47) 53
':' (58) 1 2 3 4 24 30 37 41
';' (59) 24 30 37 83 84 85 87 88 89 90
'<' (60) 56
'=' (61) 55
'[' (91) 9 10 11 12 14 16
']' (93) 9 10 11 12 14 16
'{' (123) 1 2 3 4 17 37
'}' (125) 1 2 3 4 17 37
error (256)
KW_INT (258) 1 2 3 4 5 9
KW_REAL (259) 6 10
KW_BOOL (260) 7 11
KW_STRING (261) 8 12
KW_IF (262) 84 85
KW_THEN (263) 84 85
KW_ELSE (264) 84
KW_FI (265) 84 85
KW_WHILE (266) 87
KW_LOOP (267) 87
KW_POOL (268) 87
KW_CONST (269) 1 2 3 4 22 37
KW_LET (270) 23
KW_BREAK (271)
KW_RETURN (272) 88 89
KW_START (273) 1 2 3 4
DIFFERENT_OP (274) 58
EQUAL_LESS_OP (275) 57
AND_OP (276) 59
OR_OP (277) 60
NOT_OP (278) 71
ASSIGN_OP (279) 1 2 3 4 28 29 33 34 37 83
ARROW_OP (280) 1 2 3 4 37
POS_INT (281) 62
POS_REAL (282) 63
KW_TRUE (283) 72
KW_FALSE (284) 73
IDENTIFIER (285) 13 14 16 74 75
STRING (286) 64


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1 2 3 4, on right: 0
type_spec (50)
    on left: 5 6 7 8 9 10 11 12, on right: 24 30 37 41
decl_id (51)
    on left: 13 14 15, on right: 27 28 29 33 34 37 42 43 66 83
table_id (52)
    on left: 16, on right: 15
table_init (53)
    on left: 17, on right: 29 34
table_init_values (54)
    on left: 18 19, on right: 17 18
decl_list (55)
    on left: 20 21, on right: 1 3 20
decl (56)
    on left: 22 23, on right: 20 21 46 47
let_decl_body (57)
    on left: 24, on right: 23
let_decl_list (58)
    on left: 25 26, on right: 24 25
let_decl_init (59)
    on left: 27 28 29, on right: 25 26
const_decl_body (60)
    on left: 30, on right: 22
const_decl_list (61)
    on left: 31 32, on right: 30 31
const_decl_init (62)
    on left: 33 34, on right: 31 32
func_list (63)
    on left: 35 36, on right: 1 2 35
func (64)
    on left: 37, on right: 35 36
func_param_list (65)
    on left: 38 39 40, on right: 37 39
func_param (66)
    on left: 41, on right: 39 40
param_list (67)
    on left: 42 43, on right: 41 42
body (68)
    on left: 44 45, on right: 1 2 3 4 37
body_decl_list (69)
    on left: 46 47, on right: 45 46
instr_list (70)
    on left: 48 49, on right: 44 45 48 86
expr (71)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61, on right: 16 18 19
    28 33 50 51 52 53 54 55 56 57 58 59 60 68 76 77 83 84 85 87 88
term (72)
    on left: 62 63 64 65 66 67 68 69 70 71, on right: 50 51 52 53 54
    55 56 57 58 59 60 61 69 70 71
bool (73)
    on left: 72 73, on right: 65
func_call (74)
    on left: 74 75, on right: 67 90
func_stm (75)
    on left: 76 77, on right: 74 76
instr (76)
    on left: 78 79 80 81 82, on right: 48 49
instr_assigment (77)
    on left: 83, on right: 79
instr_control (78)
    on left: 84 85, on right: 80
stmt (79)
    on left: 86, on right: 84 85 87
instr_loop (80)
    on left: 87, on right: 81
return (81)
    on left: 88 89, on right: 82
instr_func_call (82)
    on left: 90, on right: 78


State 0

    0 $accept: . program $end
    1 program: . decl_list func_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    2        | . func_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    3        | . decl_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    4        | . KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   20 decl_list: . decl_list decl
   21          | . decl
   22 decl: . KW_CONST const_decl_body
   23     | . KW_LET let_decl_body
   35 func_list: . func_list func
   36          | . func
   37 func: . KW_CONST decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_CONST  shift, and go to state 1
    KW_LET    shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    func_list  go to state 6
    func       go to state 7


State 1

    4 program: KW_CONST . KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   22 decl: KW_CONST . const_decl_body
   30 const_decl_body: . const_decl_list ':' type_spec ';'
   31 const_decl_list: . const_decl_list ',' const_decl_init
   32                | . const_decl_init
   33 const_decl_init: . decl_id ASSIGN_OP expr
   34                | . decl_id ASSIGN_OP table_init
   37 func: KW_CONST . decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_START    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    decl_id          go to state 10
    table_id         go to state 11
    const_decl_body  go to state 12
    const_decl_list  go to state 13
    const_decl_init  go to state 14


State 2

   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   23 decl: KW_LET . let_decl_body
   24 let_decl_body: . let_decl_list ':' type_spec ';'
   25 let_decl_list: . let_decl_list ',' let_decl_init
   26              | . let_decl_init
   27 let_decl_init: . decl_id
   28              | . decl_id ASSIGN_OP expr
   29              | . decl_id ASSIGN_OP table_init

    IDENTIFIER  shift, and go to state 9

    decl_id        go to state 15
    table_id       go to state 11
    let_decl_body  go to state 16
    let_decl_list  go to state 17
    let_decl_init  go to state 18


State 3

    0 $accept: program . $end

    $end  shift, and go to state 19


State 4

    1 program: decl_list . func_list KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
    3        | decl_list . KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   20 decl_list: decl_list . decl
   22 decl: . KW_CONST const_decl_body
   23     | . KW_LET let_decl_body
   35 func_list: . func_list func
   36          | . func
   37 func: . KW_CONST decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_CONST  shift, and go to state 20
    KW_LET    shift, and go to state 2

    decl       go to state 21
    func_list  go to state 22
    func       go to state 7


State 5

   21 decl_list: decl .

    $default  reduce using rule 21 (decl_list)


State 6

    2 program: func_list . KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   35 func_list: func_list . func
   37 func: . KW_CONST decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_CONST  shift, and go to state 23

    func  go to state 24


State 7

   36 func_list: func .

    $default  reduce using rule 36 (func_list)


State 8

    4 program: KW_CONST KW_START . ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'

    ASSIGN_OP  shift, and go to state 25


State 9

   13 decl_id: IDENTIFIER .  [ASSIGN_OP, ':', ',']
   14        | IDENTIFIER . '[' ']'
   16 table_id: IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 26

    $default  reduce using rule 13 (decl_id)


State 10

   33 const_decl_init: decl_id . ASSIGN_OP expr
   34                | decl_id . ASSIGN_OP table_init
   37 func: KW_CONST decl_id . ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    ASSIGN_OP  shift, and go to state 27


State 11

   15 decl_id: table_id .

    $default  reduce using rule 15 (decl_id)


State 12

   22 decl: KW_CONST const_decl_body .

    $default  reduce using rule 22 (decl)


State 13

   30 const_decl_body: const_decl_list . ':' type_spec ';'
   31 const_decl_list: const_decl_list . ',' const_decl_init

    ':'  shift, and go to state 28
    ','  shift, and go to state 29


State 14

   32 const_decl_list: const_decl_init .

    $default  reduce using rule 32 (const_decl_list)


State 15

   27 let_decl_init: decl_id .  [':', ',']
   28              | decl_id . ASSIGN_OP expr
   29              | decl_id . ASSIGN_OP table_init

    ASSIGN_OP  shift, and go to state 30

    $default  reduce using rule 27 (let_decl_init)


State 16

   23 decl: KW_LET let_decl_body .

    $default  reduce using rule 23 (decl)


State 17

   24 let_decl_body: let_decl_list . ':' type_spec ';'
   25 let_decl_list: let_decl_list . ',' let_decl_init

    ':'  shift, and go to state 31
    ','  shift, and go to state 32


State 18

   26 let_decl_list: let_decl_init .

    $default  reduce using rule 26 (let_decl_list)


State 19

    0 $accept: program $end .

    $default  accept


State 20

    3 program: decl_list KW_CONST . KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   22 decl: KW_CONST . const_decl_body
   30 const_decl_body: . const_decl_list ':' type_spec ';'
   31 const_decl_list: . const_decl_list ',' const_decl_init
   32                | . const_decl_init
   33 const_decl_init: . decl_id ASSIGN_OP expr
   34                | . decl_id ASSIGN_OP table_init
   37 func: KW_CONST . decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_START    shift, and go to state 33
    IDENTIFIER  shift, and go to state 9

    decl_id          go to state 10
    table_id         go to state 11
    const_decl_body  go to state 12
    const_decl_list  go to state 13
    const_decl_init  go to state 14


State 21

   20 decl_list: decl_list decl .

    $default  reduce using rule 20 (decl_list)


State 22

    1 program: decl_list func_list . KW_CONST KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   35 func_list: func_list . func
   37 func: . KW_CONST decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_CONST  shift, and go to state 34

    func  go to state 24


State 23

    2 program: func_list KW_CONST . KW_START ASSIGN_OP '(' ')' ':' KW_INT ARROW_OP '{' body '}'
   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   37 func: KW_CONST . decl_id ASSIGN_OP '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'

    KW_START    shift, and go to state 35
    IDENTIFIER  shift, and go to state 9

    decl_id   go to state 36
    table_id  go to state 11


State 24

   35 func_list: func_list func .

    $default  reduce using rule 35 (func_list)


State 25

    4 program: KW_CONST KW_START ASSIGN_OP . '(' ')' ':' KW_INT ARROW_OP '{' body '}'

    '('  shift, and go to state 37


State 26

   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   14        | IDENTIFIER '[' . ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   16         | IDENTIFIER '[' . expr ']'
   50 expr: . term '+' expr
   51     | . term '-' expr
   52     | . term '*' expr
   53     | . term '/' expr
   54     | . term '%' expr
   55     | . term '=' expr
   56     | . term '<' expr
   57     | . term EQUAL_LESS_OP expr
   58     | . term DIFFERENT_OP expr
   59     | . term AND_OP expr
   60     | . term OR_OP expr
   61     | . term
   62 term: . POS_INT
   63     | . POS_REAL
   64     | . STRING
   65     | . bool
   66     | . decl_id
   67     | . func_call
   68     | . '(' expr ')'
   69     | . '-' term
   70     | . '+' term
   71     | . NOT_OP term
   72 bool: . KW_TRUE
   73     | . KW_FALSE
   74 func_call: . IDENTIFIER '(' func_stm ')'
   75          | . IDENTIFIER '(' ')'

    NOT_OP      shift, and go to state 38
    POS_INT     shift, and go to state 39
    POS_REAL    shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    STRING      shift, and go to state 44
    '('         shift, and go to state 45
    ']'         shift, and go to state 46
    '+'         shift, and go to state 47
    '-'         shift, and go to state 48

    decl_id    go to state 49
    table_id   go to state 11
    expr       go to state 50
    term       go to state 51
    bool       go to state 52
    func_call  go to state 53


State 27

   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   17 table_init: . '{' table_init_values '}'
   33 const_decl_init: decl_id ASSIGN_OP . expr
   34                | decl_id ASSIGN_OP . table_init
   37 func: KW_CONST decl_id ASSIGN_OP . '(' func_param_list ')' ':' type_spec ARROW_OP '{' body '}' ';'
   50 expr: . term '+' expr
   51     | . term '-' expr
   52     | . term '*' expr
   53     | . term '/' expr
   54     | . term '%' expr
   55     | . term '=' expr
   56     | . term '<' expr
   57     | . term EQUAL_LESS_OP expr
   58     | . term DIFFERENT_OP expr
   59     | . term AND_OP expr
   60     | . term OR_OP expr
   61     | . term
   62 term: . POS_INT
   63     | . POS_REAL
   64     | . STRING
   65     | . bool
   66     | . decl_id
   67     | . func_call
   68     | . '(' expr ')'
   69     | . '-' term
   70     | . '+' term
   71     | . NOT_OP term
   72 bool: . KW_TRUE
   73     | . KW_FALSE
   74 func_call: . IDENTIFIER '(' func_stm ')'
   75          | . IDENTIFIER '(' ')'

    NOT_OP      shift, and go to state 38
    POS_INT     shift, and go to state 39
    POS_REAL    shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    STRING      shift, and go to state 44
    '('         shift, and go to state 54
    '{'         shift, and go to state 55
    '+'         shift, and go to state 47
    '-'         shift, and go to state 48

    decl_id     go to state 49
    table_id    go to state 11
    table_init  go to state 56
    expr        go to state 57
    term        go to state 51
    bool        go to state 52
    func_call   go to state 53


State 28

    5 type_spec: . KW_INT
    6          | . KW_REAL
    7          | . KW_BOOL
    8          | . KW_STRING
    9          | . '[' ']' KW_INT
   10          | . '[' ']' KW_REAL
   11          | . '[' ']' KW_BOOL
   12          | . '[' ']' KW_STRING
   30 const_decl_body: const_decl_list ':' . type_spec ';'

    KW_INT     shift, and go to state 58
    KW_REAL    shift, and go to state 59
    KW_BOOL    shift, and go to state 60
    KW_STRING  shift, and go to state 61
    '['        shift, and go to state 62

    type_spec  go to state 63


State 29

   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   31 const_decl_list: const_decl_list ',' . const_decl_init
   33 const_decl_init: . decl_id ASSIGN_OP expr
   34                | . decl_id ASSIGN_OP table_init

    IDENTIFIER  shift, and go to state 9

    decl_id          go to state 64
    table_id         go to state 11
    const_decl_init  go to state 65


State 30

   13 decl_id: . IDENTIFIER
   14        | . IDENTIFIER '[' ']'
   15        | . table_id
   16 table_id: . IDENTIFIER '[' expr ']'
   17 table_init: . '{' table_init_values '}'
   28 let_decl_init: decl_id ASSIGN_OP . expr
   29              | decl_id ASSIGN_OP . table_init
   50 expr: . term '+' expr
   51     | . term '-' expr
   52     | . term '*' expr
   53     | . term '/' expr
   54     | . term '%' expr
   55     | . term '=' expr
   56     | . term '<' expr
   57     | . term EQUAL_LESS_OP expr
   58     | . term DIFFERENT_OP expr
   59     | . term AND_OP expr
   60     | . term OR_OP expr
   61     | . term
   62 term: . POS_INT
   63     | . POS_REAL
   64     | . STRING
   65     | . bool
   66     | . decl_id
   67     | . func_call
   68     | . '(' expr ')'
   69     | . '-' term
   70     | . '+' term
   71     | . NOT_OP term
   72 bool: . KW_TRUE
   73     | . KW_FALSE
   74 func_call: . IDENTIFIER '(' func_stm ')'
   75          | . IDENTIFIER '(' ')'
